--- a/css/main.css
+++ b/css/main.css
@@ -118,19 +118,20 @@ button {
   border-radius: 4px;
 }
 
-.logo-bl {
-  color: var(--logo-text-color);
-}
-
 .logo {
   font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
 }
-
-.accent {
+.logo__accent {
   color: var(--accent-color);
+}
+.logo__header {
+  color: var(--logo-text-color);
+}
+.logo__footer {
+  color: var(--title-text-color);
 }
 
 .modal-form-title {
@@ -323,53 +324,34 @@ button {
   margin-bottom: 50px;
 }
 
-.page-header-container,
-.site-nav,
-.auth-nav,
-.page-header-nav {
-  display: flex;
-  align-items: center;
+.page-header {
+  background-color: var(--background-color);
+  border-bottom: 1px solid #ececec;
+  letter-spacing: 0.02em;
 }
-
 .page-header .logo {
   padding-top: 24px;
   padding-bottom: 25px;
 }
+.page-header__container {
+  display: flex;
+  align-items: center;
+}
 
-.site-nav {
+.menu {
+  display: flex;
+  align-items: center;
+}
+.menu__list {
+  display: flex;
+  align-items: center;
   margin-left: 93px;
   gap: 50px;
 }
-
-.site-nav-link,
-.auth-nav-link {
+.menu__link {
   padding-top: 32px;
   padding-bottom: 32px;
   display: block;
-}
-
-.auth-nav-link {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  fill: currentColor;
-}
-
-.auth-nav {
-  margin-left: auto;
-  gap: 50px;
-}
-
-.page-header {
-  background-color: var(--background-color);
-  border-bottom: 1px solid #ececec;
-}
-
-.spacing {
-  letter-spacing: 0.02em;
-}
-
-.site-nav .link {
   color: var(--text-color);
   font-weight: 500;
   line-height: 1.14;
@@ -377,16 +359,37 @@ button {
   position: relative;
   transition: color var(--animation);
 }
-
-.site-nav .link:hover,
-.site-nav .link:focus {
+.menu__link:hover, .menu__link:focus {
   color: var(--accent-color);
 }
 
-.site-nav .current {
+.header-contact {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  gap: 50px;
+}
+.header-contact__link {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  display: block;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  fill: currentColor;
+  color: var(--primary-text-color);
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  transition: color var(--animation);
+}
+.header-contact__link:hover, .header-contact__link:focus {
   color: var(--accent-color);
 }
 
+.current {
+  color: var(--accent-color);
+}
 .current::after {
   position: absolute;
   bottom: -1px;
@@ -396,19 +399,6 @@ button {
   border-radius: 2px;
   width: 100%;
   height: 4px;
-}
-
-.auth-nav .link {
-  color: var(--primary-text-color);
-  font-weight: 500;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  transition: color var(--animation);
-}
-
-.auth-nav .link:hover,
-.auth-nav .link:focus {
-  color: var(--accent-color);
 }
 
 .hero__button {
@@ -662,34 +652,17 @@ button {
   padding-top: 60px;
   padding-bottom: 60px;
 }
-
-.logo-wh {
-  color: var(--title-text-color);
-}
-
-.footer-container {
+.page-footer__container {
   display: flex;
   align-items: baseline;
 }
-
-.page-footer .title {
+.page-footer__title {
   margin-bottom: 20px;
   color: var(--title-text-color);
 }
-
 .page-footer__social {
   fill: var(--title-text-color);
   background-color: rgba(255, 255, 255, 0.1);
-}
-
-.footer-list .link {
-  color: var(--title-text-color);
-  transition: color var(--animation);
-}
-
-.footer-list .link:hover,
-.footer-list .link:focus {
-  color: var(--accent-color);
 }
 
 .footer-address {
@@ -699,31 +672,32 @@ button {
   line-height: 1.71;
   margin-right: 70px;
 }
-
 .footer-address li + li {
   margin-top: 9px;
 }
-
-.footer-list .addres {
+.footer-address__link {
+  color: var(--title-text-color);
+  transition: color var(--animation);
+}
+.footer-address__link:hover, .footer-address__link:focus {
+  color: var(--accent-color);
+}
+.footer-address__contact {
   color: var(--footer-text-color);
   transition: color var(--animation);
 }
-
-.footer-list .addres:hover,
-.footer-list .addres:focus {
+.footer-address__contact:hover, .footer-address__contact:focus {
   color: var(--accent-color);
 }
 
 .form-footer {
   margin-left: auto;
 }
-
-.form-footer-container {
+.form-footer__container {
   display: flex;
   gap: 12px;
 }
-
-.form-footer-input {
+.form-footer__input {
   font-size: 16px;
   line-height: 1.25;
   width: 358px;
@@ -736,17 +710,14 @@ button {
   color: var(--title-text-color);
   transition: border-color var(--animation);
 }
-
-.form-footer-input::placeholder {
+.form-footer__input::placeholder {
   color: rgba(255, 255, 255, 0.6);
 }
-
-.form-footer-input:focus {
+.form-footer__input:focus {
   border-color: var(--accent-color);
   outline: none;
 }
-
-.form-footer-button {
+.form-footer__button {
   padding: 10px 28px;
   display: flex;
   justify-content: center;
