--- a/scss/components/_logo.scss
+++ b/scss/components/_logo.scss
@@ -1,13 +1,15 @@
-.logo-bl {
-    color: var(--logo-text-color);
-}
 .logo {
-    font-family: Raleway, sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-}
-
-.accent {
-    color: var(--accent-color);
+	font-family: Raleway, sans-serif;
+	font-weight: 700;
+	font-size: 26px;
+	line-height: 1.19;
+	&__accent {
+		color: var(--accent-color);
+	}
+	&__header {
+		color: var(--logo-text-color);
+	}
+	&__footer {
+		color: var(--title-text-color);
+	}
 }
