--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -2,35 +2,18 @@
 	background-color: var(--title-background-color);
 	padding-top: 60px;
 	padding-bottom: 60px;
-}
-
-.logo-wh {
-	color: var(--title-text-color);
-}
-
-.footer-container {
-	display: flex;
-	align-items: baseline;
-}
-
-.page-footer .title {
-	margin-bottom: 20px;
-	color: var(--title-text-color);
-}
-
-.page-footer__social {
-	fill: var(--title-text-color);
-	background-color: rgba(255, 255, 255, 0.1);
-}
-
-.footer-list .link {
-	color: var(--title-text-color);
-	transition: color var(--animation);
-}
-
-.footer-list .link:hover,
-.footer-list .link:focus {
-	color: var(--accent-color);
+	&__container {
+		display: flex;
+		align-items: baseline;
+	}
+	&__title {
+		margin-bottom: 20px;
+		color: var(--title-text-color);
+	}
+	&__social {
+		fill: var(--title-text-color);
+		background-color: rgba(255, 255, 255, 0.1);
+	}
 }
 
 .footer-address {
@@ -39,60 +22,60 @@
 	font-weight: 400;
 	line-height: 1.71;
 	margin-right: 70px;
-}
-
-.footer-address li + li {
-	margin-top: 9px;
-}
-
-.footer-list .addres {
-	color: var(--footer-text-color);
-	transition: color var(--animation);
-}
-
-.footer-list .addres:hover,
-.footer-list .addres:focus {
-	color: var(--accent-color);
+	li + li {
+		margin-top: 9px;
+	}
+	&__link {
+		color: var(--title-text-color);
+		transition: color var(--animation);
+		&:hover,
+		&:focus {
+			color: var(--accent-color);
+		}
+	}
+	&__contact {
+		color: var(--footer-text-color);
+		transition: color var(--animation);
+		&:hover,
+		&:focus {
+			color: var(--accent-color);
+		}
+	}
 }
 
 .form-footer {
 	margin-left: auto;
-}
-
-.form-footer-container {
-	display: flex;
-	gap: 12px;
-}
-
-.form-footer-input {
-	font-size: 16px;
-	line-height: 1.25;
-	width: 358px;
-	height: 50px;
-	padding: 15px 16px;
-	border: 1px solid rgba(255, 255, 255, 0.3);
-	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-	border-radius: 4px;
-	background: var(--title-background-color);
-	color: var(--title-text-color);
-	transition: border-color var(--animation);
-}
-
-.form-footer-input::placeholder {
-	color: rgba(255, 255, 255, 0.6);
-}
-
-.form-footer-input:focus {
-	border-color: var(--accent-color);
-	outline: none;
-}
-
-.form-footer-button {
-	padding: 10px 28px;
-	display: flex;
-	justify-content: center;
-	text-align: none;
-	gap: 10px;
-	margin-right: 0;
-	margin-left: 0;
+	&__container {
+		display: flex;
+		gap: 12px;
+	}
+	&__input {
+		font-size: 16px;
+		line-height: 1.25;
+		width: 358px;
+		height: 50px;
+		padding: 15px 16px;
+		border: 1px solid rgba(255, 255, 255, 0.3);
+		filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+		border-radius: 4px;
+		background: var(--title-background-color);
+		color: var(--title-text-color);
+		transition: border-color var(--animation);
+		&::placeholder {
+			color: rgba(255, 255, 255, 0.6);
+		}
+		&:focus {
+			border-color: var(--accent-color);
+			outline: none;
+		}
+	}
+	&__button {
+		padding: 10px 28px;
+		display: flex;
+		justify-content: center;
+		text-align: none;
+		gap: 10px;
+		margin-right: 0;
+		margin-left: 0;
+	}
 }
