--- a/scss/components/_modal-form.scss
+++ b/scss/components/_modal-form.scss
@@ -1,112 +1,100 @@
-.modal-form-title {
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 1.15;
-    text-align: center;
-    color: var(--text-color);
-    margin-bottom: 12px;
+.modal-form {
+	&__title {
+		font-weight: 700;
+		font-size: 20px;
+		line-height: 1.15;
+		text-align: center;
+		color: var(--text-color);
+		margin-bottom: 12px;
+	}
+
+	&__field {
+		display: block;
+		font-size: 12px;
+		line-height: 1.16;
+		letter-spacing: 0.01em;
+		color: var(--primary-text-color);
+		& + & {
+			margin-top: 10px;
+		}
+	}
+	&__imput {
+		width: 100%;
+		height: 40px;
+		border: 1px solid rgba(33, 33, 33, 0.2);
+		border-radius: 4px;
+		padding: 12px 12px 12px 42px;
+		transition: border-color var(--animation);
+		&:focus {
+			border-color: var(--accent-color);
+			outline: none;
+		}
+	}
+	&__icon {
+		position: absolute;
+		left: 12px;
+		top: 50%;
+		transform: translateY(-50%);
+		transition: fill var(--animation);
+		.modal-form__imput:focus + & {
+			fill: var(--accent-color);
+		}
+	}
+	&__container {
+		position: relative;
+		display: block;
+		margin-top: 4px;
+	}
+	&__messag {
+		width: 100%;
+		height: 120px;
+		border: 1px solid rgba(33, 33, 33, 0.2);
+		border-radius: 4px;
+		resize: none;
+		margin-top: 4px;
+		margin-bottom: 20px;
+		padding: 12px 16px;
+		transition: border-color var(--animation);
+		&::placeholder {
+			color: rgba(117, 117, 117, 0.5);
+		}
+		&:focus {
+			border-color: var(--accent-color);
+			outline: none;
+		}
+	}
+	&__link {
+		color: var(--accent-color);
+	}
+	&__button {
+		padding: 10px 52px;
+		display: flex;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	&__check-field {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		margin-bottom: 30px;
+		font-weight: 400;
+		font-size: 14px;
+		line-height: 1.71;
+		color: var(--primary-text-color);
+	}
 }
 
-.modal-form-field {
-    display: block;
-    font-size: 12px;
-    line-height: 1.16;
-    letter-spacing: 0.01em;
-    color: var(--primary-text-color);
+.modal-form__check {
+	margin-right: 7px;
+	.modal-form__checkbox:checked ~ & {
+		display: none;
+	}
 }
 
-.modal-form-field+.modal-form-field {
-    margin-top: 10px;
-}
-
-.modal-form-imput {
-    width: 100%;
-    height: 40px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    padding: 12px 12px 12px 42px;
-    transition: border-color var(--animation);
-}
-
-.modal-form-imput:focus {
-    border-color: var(--accent-color);
-    outline: none;
-}
-
-.modal-form-imput:focus+.modal-form-icon {
-    fill: var(--accent-color);
-}
-
-.modal-form-icon {
-    position: absolute;
-    left: 12px;
-    top: 50%;
-    transform: translateY(-50%);
-    transition: fill var(--animation);
-}
-
-.modal-form-container {
-    position: relative;
-    display: block;
-    margin-top: 4px;
-}
-
-.modal-form-messag {
-    width: 100%;
-    height: 120px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    resize: none;
-    margin-top: 4px;
-    margin-bottom: 20px;
-    padding: 12px 16px;
-    transition: border-color var(--animation);
-}
-
-.modal-form-messag::placeholder {
-    color: rgba(117, 117, 117, 0.5);
-}
-
-.modal-form-check-field {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 30px;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
-    color: var(--primary-text-color);
-}
-
-.modal-form-messag:focus {
-    border-color: var(--accent-color);
-    outline: none;
-}
-
-.modal-form-link {
-    color: var(--accent-color);
-}
-
-.modal-form-submit {
-    padding: 10px 52px;
-    display: flex;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.modal-form-checkbox:checked~.modal-form-check {
-    display: none;
-}
-
-.modal-form-checkbox:checked~.modal-form-check-activ {
-    display: block;
-}
-
-.modal-form-check {
-    margin-right: 7px;
-}
-
-.modal-form-check-activ {
-    display: none;
-    margin-right: 7px;
+.modal-form__check-activ {
+	display: none;
+	margin-right: 7px;
+	.modal-form__checkbox:checked ~ & {
+		display: block;
+	}
 }
