--- a/scss/layout/_client.scss
+++ b/scss/layout/_client.scss
@@ -1,27 +1,28 @@
-.client__list {
-    display: flex;
-    gap: 30px;
-}
+.client {
+	&__list {
+		display: flex;
+		gap: 30px;
+	}
 
-.client__item {
-    width: 170px;
-    height: 92px;
-}
+	&__item {
+		width: 170px;
+		height: 92px;
+	}
 
-.client__link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    fill: #afb1b8;
-    width: 100%;
-    height: 100%;
-    border: 1px solid #afb1b8;
-    border-radius: 4px;
-    transition: border-color var(--animation), fill var(--animation);
-}
-
-.client__link:hover,
-.client__link:focus {
-    border-color: var(--accent-color);
-    fill: var(--accent-color);
+	&__link {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		fill: #afb1b8;
+		width: 100%;
+		height: 100%;
+		border: 1px solid #afb1b8;
+		border-radius: 4px;
+		transition: border-color var(--animation), fill var(--animation);
+		&:hover,
+		&:focus {
+			border-color: var(--accent-color);
+			fill: var(--accent-color);
+		}
+	}
 }
