--- a/scss/layout/_feature.scss
+++ b/scss/layout/_feature.scss
@@ -1,21 +1,21 @@
-.feature__list {
-    display: flex;
-    gap: 30px;
-}
+.feature {
+	&__list {
+		display: flex;
+		gap: 30px;
+	}
 
+	&__item {
+		flex-basis: calc((100% - 90px) / 4);
+	}
 
-
-.feature__item {
-    flex-basis: calc((100% - 90px) / 4);
-}
-
-.feature__icon {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 120px;
-    border-radius: 4px;
-    background: #f5f4f4;
-    margin-bottom: 30px;
+	&__icon {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 100%;
+		height: 120px;
+		border-radius: 4px;
+		background: #f5f4f4;
+		margin-bottom: 30px;
+	}
 }
