--- a/scss/layout/_team.scss
+++ b/scss/layout/_team.scss
@@ -1,34 +1,32 @@
-.team__description {
-    padding-top: 30px;
-    padding-bottom: 30px;
-    text-align: center;
-    background-color: var(--background-color);
-}
-
-.team__item {
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
-}
-
-.team__title {
-    color: var(--text-color);
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.18;
-    text-align: center;
-}
-
-.team__text {
-    font-size: 16px;
-    line-height: 1.18;
-    text-align: center;
-    margin-top: 10px;
-    margin-bottom: 16px;
-}
-.team__list {
-    display: flex;
-    gap: 30px;
-}
 .team {
-    background-color: var(--team-background-color);
+	background-color: var(--team-background-color);
+	&__list {
+		display: flex;
+		gap: 30px;
+	}
+	&__item {
+		box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+		border-radius: 0px 0px 4px 4px;
+	}
+	&__description {
+		padding-top: 30px;
+		padding-bottom: 30px;
+		text-align: center;
+		background-color: var(--background-color);
+	}
+	&__title {
+		color: var(--text-color);
+		font-weight: 500;
+		font-size: 16px;
+		line-height: 1.18;
+		text-align: center;
+	}
+
+	&__text {
+		font-size: 16px;
+		line-height: 1.18;
+		text-align: center;
+		margin-top: 10px;
+		margin-bottom: 16px;
+	}
 }
